overflow-x fixet og text-decoration

--- a/styles.css
+++ b/styles.css
@@ -859,7 +859,7 @@ header{
 
 #negleformerbaggrund{
   width: 100%;
-  height:33vw;
+  height:33%;
   background-image: url(images/negleformer.png);
   background-repeat: no-repeat;
   background-size: 100%;
@@ -939,6 +939,7 @@ display: none;
   background-color: #fcfbfa;
   border: none;
   margin-left: 1vw;
+  text-decoration: none;
 }
 
 #farvebeskrivelse{
@@ -1047,6 +1048,11 @@ display: none;
 }
 /*------håndbogen mobil---------*/
 @media only screen and (max-width: 992px){
+
+  main{
+    overflow-x: hidden;
+  }
+
   #handbogbillede{
     background-image: url(images/Mannasløjfecutout.png);
     padding-top: 40vw;
@@ -1261,7 +1267,7 @@ display: none;
 
 .h2plejeguide{
   font-size: 10vw;
-  margin-top: -5vh;
+  margin-top: -4vh;
 }
 
 #tipnr1{
